credential-management: change name for full_name,  add limit to full_name displayed characters, fix responsive fro table frame, make sort arrow visible before hover, change date format, change pagination (10, 25, 50)

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -1,6 +1,14 @@
 @import "../../../styles.scss";
 
+::ng-deep .mat-sort-header-container:not(.mat-sort-header-sorted) .mat-sort-header-arrow {
+  opacity: 0.54 !important;
+  color: $Light-Blue-Secondary;
+  transform: translateY(0px) !important;
 
+  &:hover{
+    opacity: 1 !important;
+  }
+}
   .credential-management-container {
     display: flex;
     flex-direction: column;
@@ -28,11 +36,15 @@
     }
 
     .table-container {
-      width: 70%;
+      width:auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       margin-bottom: 2rem;
+    }
+
+    .mat-mdc-row{
+      max-height:52px;
     }
 
     .table-row-odd {
@@ -56,10 +68,22 @@
   }
 
   .mat-column-full_name{
-    max-width: 100px; 
-    max-height: 50px; 
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-width:150px;
+
+    .full-name-wrapper {
+      height:100%;
+      max-width: 220px; 
+      white-space: nowrap;   
+      overflow: hidden;     
+      text-overflow: ellipsis;
+    }
+  }
+
+  .table-frame{
+    display:flex;
+    flex-direction:column;
+    align-items:stretch;
+    width: 70%;
   }
 
 @media(width < 1025px){
@@ -82,5 +106,29 @@
         gap: 8px;
       }
     }
+    .table-container {
+      width: 100% !important;
+      max-width: 100% !important;
+      overflow-x:auto;
+      display: block;
+      // flex-direction: column;
+      // align-items: center;
+      // margin-bottom: 2rem;
+    }
+    .table-frame{
+      width:100%;
+      display:flex;
+      flex-direction:column;
+      align-items:stretch;
+    }
+    .mat-column-full_name{
+      max-width:150px;
+  
+      .full-name-wrapper {
+        max-width:150px;
+      }
   }
+}
+
+
 }
